--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,14 @@
 <body>
 	<div class="navbar">
 	
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="contact.html">Contact</a>
   <a href="work.html">Work</a>
 </div> 
 	
 	<main id="content">
  
-		<a href="home.html">
+		<a href="index.html">
 		<h1 style="align-content: center">Atomic<br> Production</h1>
 		</a>
 	</main>
